--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/node": "^18.14.4"
   }
 }
